# jimmbot_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controller.yaml
launch/: controller.launch  description.launch  display.launch  gazebo.launch  urdf.rviz
meshes/boggie/: boggie.txt
meshes/chassis/: chassis.txt
meshes/differential/: differential.stl  differential.txt  differential_rod.stl
meshes/gps/: linx_gps.dae
meshes/wheel/: wheel.dae  wheel.stl  wheel.txt  wheel_axis.dae  wheel_axis.stl
meshes/wifi_antenna/: wifi_antenna.dae
meshes/ydlidar/: ydlidar_mount.stl  ydlidar_mount.txt
urdf/: <!-- differential -->.xml  jimmbot copy.xacro  jimmbot.gazebo  jimmbot.gazebo.xacro  jimmbot.gv  jimmbot.trans  jimmbot.urdf  jimmbot.xacro  jimmbot_inertias.xacro  materials.xacro
